.deploy/istio/virtualservice_istio.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: istio-system
  namespace: istio-system
spec:
  hosts:
    - "*"
  gateways:
    - default/deploy-sample-gateway
  http:
    - match:
        - uri:
            prefix: /kiali
      rewrite:
        uri: "/"
      route:
        - destination:
            host: kiali.istio-system.svc.cluster.local
            port:
              number: 20001
