.deploy/istio/virtualservice_monitor.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: monitoring
  namespace: monitoring
spec:
  hosts:
    - "*"
  gateways:
    - default/deploy-sample-gateway
  http:
    - match:
        - uri:
            prefix: /grafana
      rewrite:
        uri: "/"
      route:
        - destination:
            host: grafana.monitoring.svc.cluster.local
            port:
              number: 3000
    - match:
        - uri:
            prefix: /prometheus
      rewrite:
        uri: "/"
      route:
        - destination:
            host: prometheus-server.monitoring.svc.cluster.local
            port:
              number: 9090
